[package]
name = "adventofcode2017"
version = "0.1.0"
authors = ["Alexander Kjäll <alexander.kjall@gmail.com>"]

[dependencies]
regex = "0.2"

[[bin]]
name = "day_1"
path = "src/day_1.rs"

[[bin]]
name = "day_2"
path = "src/day_2.rs"

[[bin]]
name = "day_3"
path = "src/day_3.rs"

[[bin]]
name = "day_4"
path = "src/day_4.rs"

[[bin]]
name = "day_5"
path = "src/day_5.rs"

[[bin]]
name = "day_6"
path = "src/day_6.rs"

[[bin]]
name = "day_7"
path = "src/day_7.rs"

[[bin]]
name = "day_8"
path = "src/day_8.rs"

[[bin]]
name = "day_9"
path = "src/day_9.rs"
